--- a/styles/_grid.scss
+++ b/styles/_grid.scss
@@ -107,7 +107,7 @@
 // Grid
 //---------------------------------------------------------------------------
 .grid-container {
-    @extend %clearfix;
+    // @extend %clearfix;
 
     max-width: $grid-width;
 
